--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "firebase": "^12.1.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-firebase-hooks": "^5.1.1",
